fix(packages): make collapser titles bold

--- a/packages/ui/src/components/Collapser.css
+++ b/packages/ui/src/components/Collapser.css
@@ -29,10 +29,9 @@
   display: flex;
   align-items: center;
   flex: 1;
-  font-weight: bold;
   font-size: var(--dds-text-base-size);
   margin: 0;
-  font-weight: var(--dds-font-medium);
+  font-weight: bold;
   color: var(--dds-heading-color);
 }
 
